# phoenix-insolvency-360

./: # INFORME DE SITUACIÓN_21_10.md  .env.example  .gitignore  .pre-commit-config.yaml  DOCUMENTACION_TECNICA.md  FASE_B1_COMPLETADA.md  FASE_B2_COMPLETADA.md  INFORME_SITUACION_PANTALLA_1.md  Makefile  README.md  README_API.md  README_FASE2.md  README_UI.md  activate_env.sh  alembic.ini  analisis.py  app.py  database.py  ingesta.py  ingesta_csv.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_server.sh  test_pdf.py
app/: __init__.py  main.py
data/: contabilidad.csv
doc/:  Phoenix Insolvency 360.pages  MEMORIA_TECNICA_PHOENIX_21_12.pages
docker/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  start.sh  stop.sh
docs/: CHANGELOG_VERSIONING.md  COMPONENTS_MODULARIZATION_GUIDE.md  CRITICAL_FIXES_SUMMARY.md  EJEMPLOS_USO.md  FASE1B_INTEGRIDAD_LEGAL_COMPLETADA.md  FASE1C_EXCEL_COMPLETADA.md  FASE1_CIERRE_RAW_TEXT.md  HARDENING_LEGAL_PLAN.md  INFORME_COMPLIANCE_ISO_ENS.md  MEJORAS_2026.md  MIGRATION_GUIDE.md  MVP_FUNCIONANDO.md  RESULTADO_PRUEBA_E2E.md  RESUMEN_IMPLEMENTACION.md  TIMELINE_BACKEND_MIGRATION.md  VALIDACION_PARSING_HARD.md  VECTORSTORE_VERSIONING.md
execute/: EJECUTAR_WINDOWS.bat
migrations/: env.py
papelera/: main.py  old_app.py  requirements.txt
scripts/: download_ley_concursal.py  download_trlc_completo.py  expand_corpus_ley_concursal.py  generate_case_report.py  generate_excel_test_files.py  generate_test_case.py  generate_word_test_files.py  ingest_ley_completa.py  install_fase2.sh  test_fase2.sh  (+1 more)
(+407 files in other folders)
