[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-legal"
version = "0.1.0"
description = "Proyecto de curso: agentes IA (Phoenix Legal)"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
  "clients_data",
  "runtime",
  "migrations",
  "papelera",
  "archive",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E722", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
# En tests priorizamos señal (fallos reales) sobre estilo.
# Mantiene el repo “verde” sin reescribir cientos de tests heredados.
"tests/**/*.py" = ["E402", "E712", "F841", "B007", "B011", "B017"]
"app/graphs/validated_nodes.py" = ["E402"]

